--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -11,7 +11,9 @@
     &__photo {
         grid-row: 1/3;
         img {
-            width: 100%;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
         }
     }
     &__descr {
@@ -24,9 +26,12 @@
         position: relative;
         padding: 1px 0 0 12px;
         @include before_circle;
-    }
+	}
+	&__subtitle {
+		margin-top: 6px;
+	}
     &__text {
-        margin-top: 20px;
+        margin: 20px 0 0 0;
         font-size: 14px;
         line-height: 21px;
     }
@@ -51,8 +56,6 @@
         }
         &-text {
             margin-top: 6px;
-            font-size: 12px;
-            line-height: 18px;
         }
     }
 }
