--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -28,7 +28,7 @@
     z-index: 10;
     visibility: hidden;
     opacity: 0;
-    transition: all .6s;
+    transition: all 0.6s;
     &.active {
         left: 0;
         visibility: visible;
