--- a/src/sass/blocks/_skills.scss
+++ b/src/sass/blocks/_skills.scss
@@ -1,17 +1,5 @@
 .skills {
 	padding: 120px 10px 0 10px;
-	&__title {
-		position: relative;
-		text-align: center;
-		@include before_circle;
-		&:before {
-			left: 50%;
-			transform: translateX(-50%);
-		}
-	}
-	&__subtitle {
-		text-align: center;
-	}
 	&__wrapper {
 		margin-top: 60px;
 		display: grid;
@@ -26,19 +14,10 @@
 		display: flex;
 		align-items: center;
 		min-height: 65px;
-		// justify-content: center;
 	}
 	&__header {
-		padding-top: 20px;
+		padding:20px 0 15px 0;
 		margin: 0;
-
-		// text-align: center;
-	}
-	&__body {
-		padding-top: 15px;
-		font-size: 12px;
-		line-height: 18px;
-		font-weight: 500;
 	}
 	&__ratings {
 		margin-top: 120px;
