--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -3,6 +3,20 @@
 
 @import 'base/variables';
 @import 'base/mixins';
+
+@import 'blocks/promo';
+@import 'blocks/title';
+@import 'blocks/button';
+@import 'blocks/sidepanel';
+@import 'blocks/menu';
+@import 'blocks/about';
+@import 'blocks/divider';
+@import 'blocks/resume';
+@import 'blocks/skills';
+@import 'blocks/portfolio';
+@import 'blocks/pricelist';
+@import 'blocks/contacts';
+
 * {
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -14,12 +28,14 @@
     margin: 0 auto;
 }
 
-@import 'blocks/promo';
-@import 'blocks/title';
-@import 'blocks/button';
-@import 'blocks/sidepanel';
-@import 'blocks/menu';
-@import 'blocks/about';
-@import 'blocks/divider';
-@import 'blocks/resume';
-@import 'blocks/skills';
+h1, h2, h3, h4 {
+	margin: 0;
+}
+
+label {
+	margin-bottom: 0;
+}
+
+
+
+
