--- a/src/sass/base/_media_checkpoints.scss
+++ b/src/sass/base/_media_checkpoints.scss
@@ -23,6 +23,11 @@
 }
 
 @media (max-width: 576px) {
+	.title {
+		&_fz36 {
+			font-size: 24px;
+		}
+	}
 	.container {
 		max-width: 100%;
 		padding: 0 10px;
