--- a/src/sass/blocks/about/_about_media.scss
+++ b/src/sass/blocks/about/_about_media.scss
@@ -1,19 +1,99 @@
+@media (max-width: 5000px) {
+	.about__mobilephoto {
+		display: none;
+	}
+}
+
 @media (max-width: 1366px) {
 	
 }
 
 @media (max-width: 1200px) {
-	
+	.about {
+		&__wrapper {
+			grid-template-columns: 400px 520px;
+			column-gap: 35px;
+		}
+		&__skills {
+			column-gap: 20px;
+			grid-template: repeat(2,minmax(115px,auto))/repeat(2,250px);
+			&-item {
+				column-gap: 15px;
+				grid-template-columns: 40px 195px;
+			}
+		}
+	}
 }
+// 	.about {
+// 		&__wrapper {
+// 			grid-template-columns: 400px 520px;
+// 			column-gap: 40px;
+// 		}
+// 		&__skills {
+// 			column-gap: 20px;
+// 			grid-template: repeat(2,minmax(115px, auto))/repeat(2, 250px);
+// 		}
+// 	}
+// }
 
 @media (max-width: 992px) {
-	
+	.title {
+		&_fz36 {
+			font-size: 30px;
+		}
+	}
+	.about {
+		&__wrapper {
+			grid-template-columns: 310px 380px;
+			column-gap: 30px;
+		}
+		&__skills {
+			grid-template-columns: 380px;
+			grid-auto-rows: minmax(115px, auto);
+			&-item {
+				grid-template-columns: 40px 325px;
+			}
+		}
+	}
 }
 
 @media (max-width: 768px) {
-	
+	.about {
+		padding-top: 40px;
+		&__wrapper {
+			grid-template: 500px auto auto / 1fr;
+			column-gap: 0;
+		}
+		&__photo {
+			grid-row: unset;
+		}
+		&__skills {
+			grid-template-columns: repeat(2, 260px);
+			&-item {
+				grid-template-columns: 40px 204px;
+				column-gap: 16px;
+			}
+		}
+		// &__mobilephoto {
+		// 	display: block;
+		// 	justify-self: center;
+		// 	// width: 100%;
+		// }
+	}
 }
 
 @media (max-width: 576px) {
-	
+	.about {
+		&__wrapper {
+			grid-template: 340px auto auto / 1fr;
+		}
+		&__skills {
+			grid-template-columns: 95%;
+			justify-items: center;
+			// &-item {
+			// 	grid-template-columns: 40px 204px;
+			// 	column-gap: 16px;
+			// }
+		}
+	}
 }
