--- a/src/sass/blocks/promo/_promo.scss
+++ b/src/sass/blocks/promo/_promo.scss
@@ -21,6 +21,7 @@
         width: 250px;
     }
     &__link {
+		font-size: 14px;
         color: #000;
         font-weight: bold;
         &:hover {
