--- a/src/sass/blocks/contacts/_contacts_media.scss
+++ b/src/sass/blocks/contacts/_contacts_media.scss
@@ -1,19 +1,100 @@
 @media (max-width: 1366px) {
-	
+	.contacts {
+		padding: 100px 0 80px 0;
+		&__wrapper {
+			padding: 0;
+		}
+	}
 }
 
 @media (max-width: 1200px) {
-	
+	.contacts {
+		&__wrapper {
+			grid-template-columns: 380px 520px;
+			justify-content: center;
+			column-gap: 20px;
+		}
+	}
 }
 
 @media (max-width: 992px) {
-	
+	.contacts {
+		&__wrapper {
+			grid-template-columns: 300px 400px;
+		}
+		&__photo{
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
+	}
 }
 
 @media (max-width: 768px) {
-	
+	.contacts {
+		&__wrapper {
+			grid-template-columns: 1fr;
+		}
+		&__title {
+			padding: 1px 0 0 0;
+			text-align: center;
+			&::before {
+				left: 50%;
+				transform: translateX(-18.5px);
+			}
+		}
+		&__subtitle, &__text, &__callback {
+			text-align: center;
+		}
+		&__social {
+			margin: 0 auto;
+			margin-top: 20px;
+			width: 150px;
+			display: flex;
+			justify-content: space-between;
+		}
+		&__link {
+			margin: 0;
+		}
+		&__photo {
+			display: none;
+		}
+		&__description {
+			justify-content: center;
+			.divider {
+				margin: 0 auto;
+				margin-top: 14px;
+			}
+		}
+	}
 }
 
 @media (max-width: 576px) {
-	
+	.contacts {
+		padding: 40px 0 40px 0;
+		&__form {
+			// grid-template: 45px 45px 190px minmax(45px,auto)/1fr;
+			// grid-template-columns: 1fr;
+			// grid-template-rows: repeat(3, 100px);
+			gap: unset;
+			row-gap: 25px;
+			// grid-template: 45px 45px 190px 36px 45px / 1fr;
+			grid-template: 45px 45px 190px minmax(45px,auto)/1fr;
+		}
+		&__textarea {
+			grid-column: unset;
+			grid-row: unset;
+		}
+		&__triggers {
+			justify-items: center;
+			grid-column: unset;
+			grid-template-columns: 1fr;
+			row-gap: 20px;
+		}
+		&__policy {
+			grid-row: 1/2;
+		}
+	}
 }
