--- a/src/sass/blocks/divider/_divider__media.scss
+++ b/src/sass/blocks/divider/_divider__media.scss
@@ -11,7 +11,10 @@
 }
 
 @media (max-width: 768px) {
-	
+	// .contacts__description {
+    //     .divider {
+	// 		margin: 0 auto;
+    //     }
 }
 
 @media (max-width: 576px) {
