--- a/src/sass/blocks/pricelist/_pricelist_media.scss
+++ b/src/sass/blocks/pricelist/_pricelist_media.scss
@@ -3,7 +3,15 @@
 }
 
 @media (max-width: 1200px) {
-	
+	.price {
+		&__wrapper {
+			grid-template-columns: repeat(auto-fit, 570px);
+			justify-content: center;
+		}
+		&__item {
+			// grid-template: repeat(2,minmax(22px,auto)) / 300px, 100px;
+		}
+	}
 }
 
 @media (max-width: 992px) {
@@ -11,9 +19,29 @@
 }
 
 @media (max-width: 768px) {
-	
+	.price {
+		&__wrapper {
+			padding: 45px 50px 0 50px;
+			grid-template-columns: 440px;
+		}
+		&__item {
+			column-gap: 70px;
+		}
+		&__body {
+			grid-column: unset;
+    		grid-row:unset;
+		}
+	}
 }
 
 @media (max-width: 576px) {
-	
+	.price {
+		&__wrapper {
+			grid-template-columns: 300px;
+		}
+		&__body {
+			grid-column: 1/3;
+			grid-row: 2/3;
+		}
+	}
 }
