--- a/src/sass/blocks/skills/_skills.scss
+++ b/src/sass/blocks/skills/_skills.scss
@@ -1,6 +1,7 @@
 .skills {
-	padding: 120px 10px 0 10px;
+    padding-top: 120px;
 	&__wrapper {
+		padding: 0 10px;
 		margin-top: 60px;
 		display: grid;
 		grid-template: repeat(2, minmax(270px, auto)) / repeat(4, minmax(270px, auto));
